--- a/XYRALITY TASK/Classes/View Controllers/XTLoginViewController.xib
+++ b/XYRALITY TASK/Classes/View Controllers/XTLoginViewController.xib
@@ -11,6 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="XTLoginViewController">
             <connections>
+                <outlet property="emailTextField" destination="Ytb-QA-GK5" id="KT3-XD-UgT"/>
+                <outlet property="loginButton" destination="Th8-gV-u9p" id="HW9-HG-OTm"/>
+                <outlet property="passwordTextField" destination="ucU-Oa-2Te" id="nx2-Ud-7T5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -40,10 +43,16 @@
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Th8-gV-u9p">
                     <rect key="frame" x="40" y="181" width="240" height="30"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="HVa-Oa-AUf"/>
                     </constraints>
-                    <state key="normal" title="Login"/>
+                    <state key="normal" title="Login">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="loginButtonTapped:" destination="-1" eventType="touchUpInside" id="AX1-NU-jSz"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
