--- a/XYRALITY TASK/Classes/View Controllers/XTLoginViewController.xib
+++ b/XYRALITY TASK/Classes/View Controllers/XTLoginViewController.xib
@@ -55,7 +55,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <constraints>
                 <constraint firstItem="ucU-Oa-2Te" firstAttribute="width" secondItem="Ytb-QA-GK5" secondAttribute="width" id="Coz-Yp-D2M"/>
                 <constraint firstItem="ucU-Oa-2Te" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Isc-z7-g0D"/>
